--- a/404.html
+++ b/404.html
@@ -3,6 +3,20 @@ permalink: /404.html
 layout: default
 ---
 
+
+<style>
+  header, footer {
+    display: none;
+  }
+</style>
+
+<head>
+  <meta charset="UTF-8">
+  <script type="text/javascript">
+     var currentUrl = window.location.pathname;
+     window.location.replace("https://kbaranowski.com" + currentUrl);
+  </script>
+</head>
 <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
@@ -18,8 +32,7 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <h1>Zmieniłem nazwę bloga Programistą Być </h1>
+  <h2>Przejdź proszę pod nowy adres <strong>kbaranowski.com</strong></h1>
+  <p>Jeśli automatyczne przekierowanie nie zadziała, kliknij <a href="https://kbaranowski.com">tutaj</a>.</p>
 </div>
