--- a/404.html
+++ b/404.html
@@ -3,20 +3,12 @@ permalink: /404.html
 layout: default
 ---
 
-
 <style>
   header, footer {
     display: none;
   }
 </style>
 
-<head>
-  <meta charset="UTF-8">
-  <script type="text/javascript">
-     var currentUrl = window.location.pathname;
-     window.location.replace("https://kbaranowski.com" + currentUrl);
-  </script>
-</head>
 <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
@@ -31,8 +23,27 @@ layout: default
   }
 </style>
 
-<div class="container">
-  <h1>Zmieniłem nazwę bloga Programistą Być </h1>
-  <h2>Przejdź proszę pod nowy adres <strong>kbaranowski.com</strong></h1>
-  <p>Jeśli automatyczne przekierowanie nie zadziała, kliknij <a href="https://kbaranowski.com">tutaj</a>.</p>
+
+<head>
+  <meta charset="UTF-8">
+  <script type="text/javascript">
+     var currentUrl = window.location.pathname;
+     window.location.replace("https://kbaranowski.com" + currentUrl);
+  </script>
+</head>
+
+<div style="text-align: center;">
+
+  <img src="{{ site.baseurl }}/assets/pb_logo_full.png" alt="Logo" style="max-width: 200px; margin-bottom: 20px;"/>
+  <h2>⬇️</h2>
+  <img src="{{ site.baseurl }}/assets/kbaranowski_svg.svg" alt="Logo" style="max-width: 300px; margin-bottom: 20px;"/>
+
+  <h1>Programistą Być od września 2024 nazywa się inaczej.</h1>
+  <p>Będę teraz pisał po angielsku. Jest nikła szansa na to, że pojawią się jakieś nowe polskie wpisy (choć nadal poprzednio napisane są dostępne pod nowym adresem).</p>
+  <p>Nadal możesz do mnie napisać na <strong>kontakt@programistabyc.pl</strong></p>
+
+  <!-- Przycisk -->
+  <a href="https://kbaranowski.com" class="button" style="background-color: orange; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block; margin-top: 20px;">
+    Odwiedź bloga w odmienionej formie.
+  </a>
 </div>
